--- a/src/ApplicationManager/Views/Home/Index.cshtml
+++ b/src/ApplicationManager/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         <base href="/">
 @*<app>Loading...</app><app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>*@
 
-<app-root  asp-prerender-module="ClientApp/dist/main-server">Loading...</app-root>
+<app-root>Loading...</app-root>
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
