--- a/src/ApplicationManager/ClientApp/app/app.component.html
+++ b/src/ApplicationManager/ClientApp/app/app.component.html
@@ -1,15 +1,2 @@
-﻿<!-- main app container -->
-
-    <div class="container">
-        <div class="col-sm-11 col-sm-offset-7">
-            <alert></alert>
-            <nav-bar></nav-bar>
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-
-
-<!-- credits -->
-<div class="text-center">
-
-</div>
+﻿<router-outlet>
+</router-outlet>
