--- a/src/ApplicationManager/ClientApp/app/home/home.component.html
+++ b/src/ApplicationManager/ClientApp/app/home/home.component.html
@@ -1,4 +1,7 @@
-﻿<div class="col-md-8 col-md-offset-3">
+﻿<app-header></app-header>
+<app-sidebar></app-sidebar>
+<section class="main-container">
+<div class="col-md-6 col-md-offset-3">
     <h1>Hi {{currentUser.firstName}}!</h1>
     <p>You're logged in with Angular 2 and Webpack!!</p>
     <h3>All registered users:</h3>
@@ -10,3 +13,4 @@
     </ul>
     <p><a [routerLink]="['/login']">Logout</a></p>
 </div>
+</section>
