--- a/src/ApplicationManager/ClientApp/app/home/home.component.html
+++ b/src/ApplicationManager/ClientApp/app/home/home.component.html
@@ -1,5 +1,5 @@
 ﻿<app-header></app-header>
-<app-sidebar></app-sidebar>
+<!-- <app-sidebar></app-sidebar> -->
 <section class="main-container">
 <div class="col-md-6 col-md-offset-3">
     <h1>Hi {{currentUser.firstName}}!</h1>
@@ -11,6 +11,6 @@
             - <a (click)="deleteUser(user.id)">Delete</a>
         </li>
     </ul>
-    <p><a [routerLink]="['/login']">Logout</a></p>
+<!--     <p><a [routerLink]="['/login']">Logout</a></p> -->
 </div>
 </section>
