--- a/src/ApplicationManager/Views/Home/Index.cshtml
+++ b/src/ApplicationManager/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 @*<app>Loading...</app><app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>*@
 
-<app >Loading...</app>
+<app asp-ng2-prerender-module="ClientApp/dist/main-server">Loading...</app>
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
