add application repository

--- a/src/ApplicationManager/ClientApp/app/home/home.component.html
+++ b/src/ApplicationManager/ClientApp/app/home/home.component.html
@@ -1,5 +1,5 @@
 ﻿<app-header></app-header>
-<app-sidebar></app-sidebar>
+<!-- <app-sidebar></app-sidebar> -->
 <section class="main-container">
     <div class="col-md-6 col-md-offset-3">
         <h1>Hi {{currentUser.firstName}}!</h1>
