--- a/src/ApplicationManager/ClientApp/app/login/login.component.html
+++ b/src/ApplicationManager/ClientApp/app/login/login.component.html
@@ -21,7 +21,9 @@
                     />
                  <!--    <a [routerLink]="['/register']" class="btn btn-link">Зарегистрироваться</a> -->
                 </div>
+                        <alert></alert>
             </form>
+    
         </div>
     </div>
 </div>
