--- a/src/ApplicationManager/ClientApp/app/applications/applications.component.html
+++ b/src/ApplicationManager/ClientApp/app/applications/applications.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-lg btn-outline-primary" (click)="open()">Launch demo modal</button>
 <p *ngIf="!applications"><em>Loading...</em></p>
 
 <table class='table table-striped' *ngIf="applications">
