add material table

--- a/src/ApplicationManager/ClientApp/app/login/login.component.scss
+++ b/src/ApplicationManager/ClientApp/app/login/login.component.scss
@@ -47,4 +47,20 @@ body {
 	  border-top-left-radius: 0;
 	  border-top-right-radius: 0;
 	}
+.example-card {
+  width: 400px;
+}
+
+.example-header-image {
+
+  background-size: cover;
+}
+
+.example-form {
+  width: 500px;
+}
+
+.example-full-width {
+  width: 100%;
+}
 }
