--- a/src/ApplicationManager/ClientApp/app/shared/components/header/header.component.html
+++ b/src/ApplicationManager/ClientApp/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="pos-f-t fixed-top header">
+<!-- <div class="pos-f-t fixed-top header">
     <nav class="navbar navbar-inverse bg-inverse navbar-toggleable-md">
         <button class="navbar-toggler navbar-toggler-right" (click)="toggleSidebar()">
             <span class="navbar-toggler-icon"></span>
@@ -25,3 +25,19 @@
         </div>
     </nav>
 </div>
+ -->
+<md-toolbar color="primary">
+
+    <span>MyCompany</span>
+ <!--    <span class="example-spacer"></span>
+    <button md-button [mdMenuTriggerFor]="appMenu"><md-icon>menu</md-icon> Menu</button> -->
+    <a [routerLink]="['/login']">Выйти</a>
+</md-toolbar>
+
+
+<!-- <md-toolbar color="primary">
+  <span>Custom Toolbar</span>
+
+
+</md-toolbar>
+<md-toolbar color="primary"> </md-toolbar> -->
