--- a/src/ApplicationManager/ClientApp/app/applications/applications.component.html
+++ b/src/ApplicationManager/ClientApp/app/applications/applications.component.html
@@ -1,4 +1,48 @@
-<button class="btn btn-lg btn-outline-primary" (click)="open()">Launch demo modal</button>
+<div class="example-container mat-elevation-z8">
+
+  <md-table #table [dataSource]="dataSource">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- ID Column -->
+    <ng-container cdkColumnDef="applicationId">
+      <md-header-cell *cdkHeaderCellDef> ID </md-header-cell>
+      <md-cell *cdkCellDef="let row"> {{row.applicationId}} </md-cell>
+    </ng-container>
+
+    <!-- Progress Column -->
+    <ng-container cdkColumnDef="address">
+      <md-header-cell *cdkHeaderCellDef> Progress </md-header-cell>
+      <md-cell *cdkCellDef="let row"> {{row.address}} </md-cell>
+    </ng-container>
+
+    <!-- Name Column -->
+     <ng-container cdkColumnDef="districtName">
+      <md-header-cell *cdkHeaderCellDef> Name </md-header-cell>
+      <md-cell *cdkCellDef="let row"> {{row.district.districtName}} </md-cell>
+    </ng-container> 
+
+    <!-- Color Column -->
+     <ng-container cdkColumnDef="statusName">
+      <md-header-cell *cdkHeaderCellDef> Color </md-header-cell>
+      <md-cell *cdkCellDef="let row"> {{row.applicationStatus.statusName}} </md-cell>
+    </ng-container> 
+
+    <md-header-row *cdkHeaderRowDef="displayedColumns"></md-header-row>
+    <md-row *cdkRowDef="let row; columns: displayedColumns;"></md-row>
+  </md-table>
+
+  <md-paginator #paginator
+                [length]="exampleDatabase.count"
+                [pageIndex]="0"
+                [pageSize]="20"
+                [pageSizeOptions]="[5, 10, 20, 50]">
+  </md-paginator>
+</div>
+
+
+<!-- 
 <p *ngIf="!applications"><em>Loading...</em></p>
 
 <table class='table table-striped' *ngIf="applications">
@@ -18,6 +62,6 @@
             <td>{{ application.applicationStatus.statusName }}</td>
         </tr>
     </tbody>
-</table>
- <ngb-pagination [(collectionSize)]="count" [(page)]="page" (pageChange)="loadPage($event)" [(pageSize)]="itemsPerPage" [maxSize]="7" [rotate]="true"></ngb-pagination> 
+</table> -->
+ <!-- <ngb-pagination [(collectionSize)]="count" [(page)]="page" (pageChange)="loadPage($event)" [(pageSize)]="itemsPerPage" [maxSize]="7" [rotate]="true"></ngb-pagination>  -->
 <!-- <ngb-pagination [collectionSize]="applications" [pageSize]="itemsPerPage" [(page)]="page" [maxSize]="7" [rotate]="true" (pageChange)="loadPage($event)"></ngb-pagination> -->
