--- a/src/ApplicationManager/ClientApp/app/applications/applications.component.html
+++ b/src/ApplicationManager/ClientApp/app/applications/applications.component.html
@@ -1,33 +1,33 @@
-<div class="example-container mat-elevation-z8">
+<md-table #table [dataSource]="dataSource" class="example-table" mdSort mdSortActive="applicationId" mdSortDisableClear mdSortDirection="asc">
 
-  <md-table #table [dataSource]="dataSource">
-    <ng-container cdkColumnDef="applicationId">
-      <md-header-cell *cdkHeaderCellDef> ID </md-header-cell>
-      <md-cell *cdkCellDef="let row"> {{row.applicationId}} </md-cell>
-    </ng-container>
+  <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
 
-    <ng-container cdkColumnDef="address">
-      <md-header-cell *cdkHeaderCellDef> Progress </md-header-cell>
-      <md-cell *cdkCellDef="let row"> {{row.address}} </md-cell>
-    </ng-container>
+  <!-- Number Column -->
+  <ng-container cdkColumnDef="applicationId">
+    <md-header-cell *cdkHeaderCellDef md-sort-header disableClear="true"> applicationId </md-header-cell>
+    <md-cell *cdkCellDef="let row"> {{row.applicationId}} </md-cell>
+  </ng-container>
 
-     <ng-container cdkColumnDef="districtName">
-      <md-header-cell *cdkHeaderCellDef> Name </md-header-cell>
+  <!-- Title Column -->
+  <ng-container cdkColumnDef="address">
+    <md-header-cell *cdkHeaderCellDef> address </md-header-cell>
+    <md-cell *cdkCellDef="let row"> {{row.address}} </md-cell>
+  </ng-container>
+
+  <!--   
+    <ng-container cdkColumnDef="districtName">
+      <md-header-cell *cdkHeaderCellDef> districtName </md-header-cell>
       <md-cell *cdkCellDef="let row"> {{row.district.districtName}} </md-cell>
-    </ng-container> 
+    </ng-container>
 
-     <ng-container cdkColumnDef="statusName">
-      <md-header-cell *cdkHeaderCellDef> Color </md-header-cell>
+    <ng-container cdkColumnDef="statusName">
+      <md-header-cell *cdkHeaderCellDef md-sort-header disableClear="true"> statusName </md-header-cell>
       <md-cell *cdkCellDef="let row"> {{row.applicationStatus.statusName}} </md-cell>
-    </ng-container> 
-    <md-header-row *cdkHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row *cdkRowDef="let row; columns: displayedColumns;"></md-row>
-  </md-table>
-
-  <md-paginator #paginator
-                [length]="_paginator.count"
-                [pageIndex]="1"
-                [pageSize]="20"
-                [pageSizeOptions]="[5, 10, 20, 50]">
-  </md-paginator>
-</div>
+    </ng-container>
+ -->
+  <md-header-row *cdkHeaderRowDef="displayedColumns"></md-header-row>
+  <md-row *cdkRowDef="let row; columns: displayedColumns;"></md-row>
+</md-table>
+<md-paginator [length]="dataSource.resultsLength" [pageSize]="10">
+</md-paginator>
