--- a/src/ApplicationManager/ClientApp/app/applications/applications.component.html
+++ b/src/ApplicationManager/ClientApp/app/applications/applications.component.html
@@ -5,7 +5,7 @@
       GitHub's API rate limit has been reached. It will be reset in one minute.
     </div>
   </div>
-  <md-table #table [dataSource]="dataSource" class="example-table" >
+  <md-table #table [dataSource]="dataSource" class="example-table" mdSort mdSortActive="applicationId" mdSortDisableClear mdSortDirection="asc">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
