--- a/src/ApplicationManager/ClientApp/app/applications/applications.component.html
+++ b/src/ApplicationManager/ClientApp/app/applications/applications.component.html
@@ -1,10 +1,10 @@
 <div class="example-container mat-elevation-z8">
-  <div class="example-loading-shade" *ngIf="dataSource.isLoadingResults || dataSource.isRateLimitReached">
+<!--   <div class="example-loading-shade" *ngIf="dataSource.isLoadingResults || dataSource.isRateLimitReached">
     <md-spinner *ngIf="dataSource.isLoadingResults"></md-spinner>
     <div class="example-rate-limit-reached" *ngIf="dataSource.isRateLimitReached">
       GitHub's API rate limit has been reached. It will be reset in one minute.
     </div>
-  </div>
+  </div> -->
   <md-table #table [dataSource]="dataSource" class="example-table" mdSort mdSortActive="applicationId" mdSortDisableClear mdSortDirection="asc">
 
     <!--- Note that these columns can be defined in any order.
@@ -35,6 +35,6 @@
     <md-header-row *cdkHeaderRowDef="displayedColumns"></md-header-row>
     <md-row *cdkRowDef="let row; columns: displayedColumns;"></md-row>
   </md-table>
-  <md-paginator [length]="dataSource.resultsLength" [pageSize]="10">
+  <md-paginator [length]="dataSource.resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
   </md-paginator>
 </div>
