--- a/src/ApplicationManager/Views/Home/Index.cshtml
+++ b/src/ApplicationManager/Views/Home/Index.cshtml
@@ -5,8 +5,12 @@
 @*<app>Loading...</app><app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>*@
 
 <app asp-ng2-prerender-module="ClientAppMaterial/dist/main-server">Loading...</app>
+
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
+
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.min.js"></script>
